--- a/.github/workflows/usecase4.yml
+++ b/.github/workflows/usecase4.yml
@@ -1,37 +1,39 @@
-name: Terraform Workflow
- 
+name: Terraform Workflow with Linting and Security Checks
+
 on:
   push:
     branches:
       - main
   pull_request:
-    types: [opened, synchronize] # Trigger on PR open and code changes
- 
+    types: [opened, synchronize]
+
 permissions:
   id-token: write
   pull-requests: write
- 
+
 jobs:
   terraform:
-    name: Terraform Actions
+    name: Terraform Actions with Linting and Security
+
     runs-on: ubuntu-latest
- 
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
- 
+
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/${{ secrets.AWS_IAM_ROLE }}
           aws-region: ${{ secrets.AWS_REGION }}
           role-session-name: GithubActionsTerraform
- 
+
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v2.0.3
         with:
           terraform_version: ">= 1.11.4"
-      
+
+      # TFlint Integration
       - name: Install TFlint
         run: |
           wget https://github.com/terraform-linters/tflint/releases/download/v0.50.2/tflint_linux_amd64.zip # Replace with the latest TFlint version
@@ -39,30 +41,38 @@ jobs:
           sudo mv tflint /usr/local/bin/
           tflint --version
 
-      - name: Verify TFlint Version
-        run: tflint --version
-
       - name: Run TFlint
         id: tflint
-        run: tflint --init && tflint -f compact # Removed --terraform-required-version for compatibility
+        run: tflint --init && tflint -f compact
         working-directory: ./
-        
- 
+
+      # Checkov Integration
+      - name: Install Checkov
+        run: |
+          pip3 install --upgrade pip
+          pip3 install checkov
+
+      - name: Run Checkov
+        id: checkov
+        run: checkov -d . --framework terraform
+        working-directory: ./
+
+      # Terraform Steps
       - name: Initialize Terraform
         id: init
         run: terraform init -backend-config="bucket=${{ secrets.TF_STATE_BUCKET }}" -backend-config="key=terraform.tfstate" -backend-config="region=${{ secrets.AWS_REGION }}"
         working-directory: ./
- 
+
       - name: Validate Terraform
         id: validate
         run: terraform validate
         working-directory: ./
- 
+
       - name: Generate Terraform Plan
         id: plan
         run: terraform plan -no-color -lock=false
         working-directory: ./
- 
+
       - name: Create Plan Output Markdown
         id: plan_report
         run: |
@@ -71,7 +81,7 @@ jobs:
           echo "$(terraform plan -no-color)" >> plan.md
           echo "```" >> plan.md
         working-directory: ./
- 
+
       - name: Comment Plan to Pull Request
         uses: actions/github-script@v7
         if: github.event_name == 'pull_request'
@@ -88,7 +98,7 @@ jobs:
               issue_number: context.event.pull_request.number,
               body: planOutput
             });
- 
+
       - name: Apply Terraform
         id: apply
         run: terraform apply -auto-approve -lock=false
